--- a/public/uropoke/dest/style.css
+++ b/public/uropoke/dest/style.css
@@ -97,11 +97,19 @@ a:hover {
   height: 100%;
 }
 
-.img-list li img {
+.img-list li > div > .none {
+  display: block;
+  padding: 4px;
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 14px;
+}
+
+.img-list li > div img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  cursor: pointer;
 }
 
 @media (max-width: 600px) {
