--- a/public/uropoke/style.scss
+++ b/public/uropoke/style.scss
@@ -27,8 +27,8 @@
     color: #fff;
     line-height: 20px;
     &:hover {
-        background: #333;
-        text-decoration: none;
+      background: #333;
+      text-decoration: none;
     }
   }
 }
@@ -49,11 +49,18 @@
       top: 0;
       width: 100%;
       height: 100%;
-    }
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      > .none {
+        display: block;
+        padding: 4px;
+        color: rgba(255, 255, 255, 0.75);
+        font-size: 14px;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        cursor: pointer;
+      }
     }
   }
 }
