--- a/public/uropoke/style.scss
+++ b/public/uropoke/style.scss
@@ -13,6 +13,16 @@
     font-size: 14px;
     font-weight: normal;
   }
+  .progress {
+    padding-top: 4px;
+    color: #aaa;
+    font-size: 11px;
+    em {
+      font-style: normal;
+      font-size: 13px;
+      color: #444;
+    }
+  }
   .about-link {
     display: block;
     position: absolute;
@@ -60,6 +70,23 @@
         height: 100%;
         object-fit: cover;
         cursor: pointer;
+      }
+    }
+    &.active {
+      width: 100%;
+      & > div {
+        text-align: center;
+        position: static;
+        width: auto;
+        height: auto;
+        img {
+          object-fit: contain;
+          width: auto;
+          max-height: 300px;
+        }
+      }
+      &:after {
+        display: none;
       }
     }
   }
