--- a/public/uropoke/style.scss
+++ b/public/uropoke/style.scss
@@ -71,6 +71,9 @@
         object-fit: cover;
         cursor: pointer;
       }
+      .status {
+        display: none;
+      }
     }
     &.active {
       width: 100%;
@@ -83,6 +86,21 @@
           object-fit: contain;
           width: auto;
           max-height: 300px;
+        }
+        .status {
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          padding: 2px 12px;
+          text-align: center;
+          font-size: 11px;
+          color: #fff;
+          background-color: rgba(0, 0, 0, 0.3);
+          p {
+            display: inline-block;
+          }
         }
       }
       &:after {
