--- a/public/uropoke/dest/style.css
+++ b/public/uropoke/dest/style.css
@@ -81,6 +81,19 @@ a:hover {
   text-decoration: none;
 }
 
+.today-item {
+  background: #fff;
+  text-align: center;
+  padding: 20px 10px;
+  font-size: 14px;
+}
+
+.today-item > em {
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+}
+
 .img-list {
   display: -webkit-box;
   display: -ms-flexbox;
